fixup tests and remove a reduces pom I meant to remove before